--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,296 @@
     <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-    
+
     <script src="./assets/js/jquery-3.4.1.min.js"></script>
     <script src="./assets/js/slick.min.js"></script>
     <script src="./assets/js/script.js"></script>
+    <!-- about section -->
+    <section class="about">
+        <div class="container">
+            <h2 class="about-ttl">About
+                <span>事業概要</span>
+            </h2>
+            <div class="about-list">
+                <ul>
+                    <li>
+                        <div class="about-img">
+                            <img src="./assets/img/speed.png" alt="スピード">
+                        </div>
+                        <div class="about-list-ttl">
+                            <h3>SPEED
+                                <span>速い</span>
+                            </h3>
+                        </div>
+                        <div class="about-list-txt">
+                            <p>実装スピードの速さに自信があります。どうしてスピードが速いかというと、在籍ITエンジニア数が多いためです。人海戦術でアサインを割り振り、ウェブサイトの新規構築やリニューアルはもちろん、テキスト修正や画像の差し替えなど細かな対応もすぐに対応が可能です。
+                            </p>
+                        </div>
+                    </li>
+                </ul>
+
+                <ul>
+                    <li>
+                        <div class="about-img">
+                            <img src="./assets/img/flexible.png" alt="スピード">
+                        </div>
+                        <div class="about-list-ttl">
+                            <h3 class="flexible">FLEXIBLE
+                                <span>柔軟性</span>
+                            </h3>
+                        </div>
+                        <div class="about-list-txt">
+                            <p>1箇所だけのテキスト修正やちょっとした画像の修正など細かな対応でもお受けしております。弊社が作成したサイトでなくても構築されたコードを解析して修正対応が可能です。既存サイトの一部分だけ修正したい、ウェブサイトを作成した制作会社が連絡がつかなくなった、保守会社を切り替えたいなどのご要望にもお応えできます。
+                            </p>
+                        </div>
+                    </li>
+                </ul>
+
+                <ul>
+                    <li>
+                        <div class="about-img">
+                            <img src="./assets/img/experience.png" alt="スピード">
+                        </div>
+                        <div class="about-list-ttl">
+                            <h3>EXPERIENCE
+                                <span>対応実績</span>
+                            </h3>
+                        </div>
+                        <div class="about-list-txt">
+                            <p>2016年から6年以上、ウェブ制作会社やデザイン会社の下請けとして数多の日本企業、サービスのサイトを構築してきました。契約上、実績公開できない物が多くありますが、行政、大学、大手自動車メーカー製品サイト、大手電機メーカー製品サイトなどいわゆる大手のウェブサイトも対応しているため技術力には自信があります。
+                            </p>
+                        </div>
+                    </li>
+                </ul>
+
+
+            </div>
+        </div>
+    </section>
+    <!-- end of about section -->
+
+    <!-- work section -->
+    <section class="work">
+        <div class="container">
+            <h2 class="work-ttl">Works
+                <span>制作事例</span>
+            </h2>
+            <div class="work-list">
+                <ul>
+                    <li>
+                        <div class="work-list-img">
+                            <img src="./assets/img/myan-navi.png" alt="ミャンマーなび">
+                        </div>
+                        <div class="work-list-ttl">
+                            <h3>ミャンマーなび</h3>
+                        </div>
+                        <div class="work-list-txt">
+                            <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                        </div>
+
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <div class="work-list-img">
+                            <img src="./assets/img/other.png" alt="東京鶴丸会様">
+                        </div>
+                        <div class="work-list-ttl">
+                            <h3>東京鶴丸会様</h3>
+                        </div>
+                        <div class="work-list-txt">
+                            <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                        </div>
+
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <div class="work-list-img">
+                            <img src="./assets/img/teles.png" alt="株式会社テレス様">
+                        </div>
+                        <div class="work-list-ttl">
+                            <h3>株式会社テレス様</h3>
+                        </div>
+                        <div class="work-list-txt">
+                            <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                        </div>
+
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <div class="work-list-img">
+                            <img src="./assets/img/nursing.png" alt="看護">
+                        </div>
+                        <div class="work-list-ttl">
+                            <h3>道福祉介護事業 協同組合様</h3>
+                        </div>
+                        <div class="work-list-txt">
+                            <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                        </div>
+
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <div class="work-list-img">
+                            <img src="./assets/img/clinic.png" alt="診療所">
+                        </div>
+                        <div class="work-list-ttl">
+                            <h3>町田産婦人科 菜の花クリニック様</h3>
+                        </div>
+                        <div class="work-list-txt">
+                            <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                        </div>
+
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <div class="work-list-img">
+                            <img src="./assets/img/QAtest.png" alt="QA TEST LAB">
+                        </div>
+                        <div class="work-list-ttl">
+                            <h3>QA TEST LAB</h3>
+                        </div>
+                        <div class="work-list-txt">
+                            <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                        </div>
+
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <div class="work-list-img">
+                            <img src="./assets/img/yamada.png" alt="やすだ勝平様">
+                        </div>
+                        <div class="work-list-ttl">
+                            <h3>やすだ勝平様</h3>
+                        </div>
+                        <div class="work-list-txt">
+                            <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                        </div>
+
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <div class="work-list-img">
+                            <img src="./assets/img/hearty-care.png" alt="ハーティーケアー様">
+                        </div>
+                        <div class="work-list-ttl">
+                            <h3>株式会社ハーティーケアー様</h3>
+                        </div>
+                        <div class="work-list-txt">
+                            <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                        </div>
+
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <div class="work-list-img">
+                            <img src="./assets/img/namazaki.png" alt="沼崎">
+                        </div>
+                        <div class="work-list-ttl">
+                            <h3>沼崎病院様</h3>
+                        </div>
+                        <div class="work-list-txt">
+                            <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                        </div>
+
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <div class="work-list-img">
+                            <img src="./assets/img/kyushu-university.png" alt="九州大学">
+                        </div>
+                        <div class="work-list-ttl">
+                            <h3>九州大学経済学部 東京同窓会様</h3>
+                        </div>
+                        <div class="work-list-txt">
+                            <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                        </div>
+
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <div class="work-list-img">
+                            <img src="./assets/img/tokyo-alumni.png" alt="九州大学東京同窓会 ">
+                        </div>
+                        <div class="work-list-ttl">
+                            <h3>九州大学東京同窓会 サマーフェスタ</h3>
+                        </div>
+                        <div class="work-list-txt">
+                            <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                        </div>
+
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <div class="work-list-img">
+                            <img src="./assets/img/jtc-language-center.png" alt="JTC日本語学校">
+                        </div>
+                        <div class="work-list-ttl">
+                            <h3>JTC日本語学校</h3>
+                        </div>
+                        <div class="work-list-txt">
+                            <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                        </div>
+
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <div class="work-list-img">
+                            <img src="./assets/img/sonetwethi.png" alt="ソネトゥティ">
+                        </div>
+                        <div class="work-list-ttl">
+                            <h3>Sone Twet Thi</h3>
+                        </div>
+                        <div class="work-list-txt">
+                            <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                        </div>
+
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <div class="work-list-img">
+                            <img src="./assets/img/green-juice1.png" alt="青汁ナチュラル">
+                        </div>
+                        <div class="work-list-ttl">
+                            <h3>青汁ナチュラル</h3>
+                        </div>
+                        <div class="work-list-txt">
+                            <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                        </div>
+
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <div class="work-list-img">
+                            <img src="./assets/img/green-juice-fruity.png" alt="青汁フルーティ">
+                        </div>
+                        <div class="work-list-ttl">
+                            <h3>青汁フルーティ</h3>
+                        </div>
+                        <div class="work-list-txt">
+                            <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                        </div>
+
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
