--- a/index.html
+++ b/index.html
@@ -9,9 +9,66 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
-    <script src="./assets/js/jquery-3.4.1.min.js"></script>
-    <script src="./assets/js/slick.min.js"></script>
-    <script src="./assets/js/script.js"></script>
+    <header>
+        <div class="container">
+            <div class="header">
+                <div class="logo">
+                    <a href="">
+                        <img src="assets/img/header_logo.png" alt="クオリーの画像">
+                    </a>
+                </div>
+                <div class="navbar">
+                    <ul>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Service</a></li>
+                        <li><a href="">Works</a></li>
+                        <li><a href="">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="menu-toggle">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <section class="slider-sec">
+        <div class="container">
+            <div class="slider center">
+                <div class="slider-img">
+                  <img src="assets/img/slider1.png" alt="branches one">
+                </div>
+                <div class="slider-img">
+                  <img src="assets/img/slider2.png" alt="branches one">
+                </div>
+                <div class="slider-img">
+                  <img src="assets/img/slider3.png" alt="branches one">
+                </div>
+              </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="footer">
+                <div class="footer-nav">
+                    <ul>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Service</a></li>
+                        <li><a href="">Works</a></li>
+                        <li><a href="">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="copyright">
+                    &copy; Qualy, Inc. All rights reserved.
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="assets/js/jquery-3.4.1.min.js"></script>
+    <script src="assets/js/slick.min.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
