--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
                 </h3>
               </div>
               <div class="about-list-txt">
-                <p>実装スピードの速さに自信があります。どうしてスピードが速いかというと、在籍ITエンジニア数が多いためです。人海戦術でアサインを割り振り、ウェブサイトの新規構築やリニューアルはもちろん、テキスト修正や画像の差し替えなど細かな対応もすぐに対応が可能です。</p>
+                <p>
+                  実装スピードの速さに自信があります。どうしてスピードが速いかというと、在籍ITエンジニア数が多いためです。人海戦術でアサインを割り振り、ウェブサイトの新規構築やリニューアルはもちろん、テキスト修正や画像の差し替えなど細かな対応もすぐに対応が可能です。
+                </p>
               </div>
             </li>
           </ul>
@@ -90,7 +92,9 @@
                 </h3>
               </div>
               <div class="about-list-txt">
-                <p>1箇所だけのテキスト修正やちょっとした画像の修正など細かな対応でもお受けしております。弊社が作成したサイトでなくても構築されたコードを解析して修正対応が可能です。既存サイトの一部分だけ修正したい、ウェブサイトを作成した制作会社が連絡がつかなくなった、保守会社を切り替えたいなどのご要望にもお応えできます。</p>
+                <p>
+                  1箇所だけのテキスト修正やちょっとした画像の修正など細かな対応でもお受けしております。弊社が作成したサイトでなくても構築されたコードを解析して修正対応が可能です。既存サイトの一部分だけ修正したい、ウェブサイトを作成した制作会社が連絡がつかなくなった、保守会社を切り替えたいなどのご要望にもお応えできます。
+                </p>
               </div>
             </li>
           </ul>
@@ -107,7 +111,9 @@
                 </h3>
               </div>
               <div class="about-list-txt">
-                <p>2016年から6年以上、ウェブ制作会社やデザイン会社の下請けとして数多の日本企業、サービスのサイトを構築してきました。契約上、実績公開できない物が多くありますが、行政、大学、大手自動車メーカー製品サイト、大手電機メーカー製品サイトなどいわゆる大手のウェブサイトも対応しているため技術力には自信があります。</p>
+                <p>
+                  2016年から6年以上、ウェブ制作会社やデザイン会社の下請けとして数多の日本企業、サービスのサイトを構築してきました。契約上、実績公開できない物が多くありますが、行政、大学、大手自動車メーカー製品サイト、大手電機メーカー製品サイトなどいわゆる大手のウェブサイトも対応しているため技術力には自信があります。
+                </p>
               </div>
             </li>
           </ul>
@@ -118,59 +124,71 @@
 
     <!-- Service Section -->
     <section id="service">
-      <div class="container">
-        <div class="mt60">
+      <div class="container service-container">
+        <div class="mt60 service-container">
           <h2 class="fz-36 fz-en-b mb20">Service</h2>
           <span class="fz-20 fz-jp-b">サービス</span>
         </div>
 
-        <div class="mt95">
-          <div class="service_details">
+        <div class="mt95 service-container">
+          <div class="service_details slide-up">
             <img src="./assets/img/seo.png" alt="SEOの画像" />
             <div>
               <h3 class="pb30 fz-30 fz-en-b">SEO / Marketing</h3>
-              <p class="fz-16 fz-jp-b">SEOでターゲットにしたいキーワードの選定から記事作成、運用まで対応いたします。キーワードの選定では検索ボリューム（検索数）の調査や競合分析を行い、レポートで可視化して報告します。その上で、キーワードの選定や、選定したキーワードでの上位表示のための施策立案、実行をご提案します。</p>
+              <p class="fz-16 fz-jp-b">
+                SEOでターゲットにしたいキーワードの選定から記事作成、運用まで対応いたします。キーワードの選定では検索ボリューム（検索数）の調査や競合分析を行い、レポートで可視化して報告します。その上で、キーワードの選定や、選定したキーワードでの上位表示のための施策立案、実行をご提案します。
+              </p>
             </div>
           </div>
         </div>
-        <div class="mt95">
-          <div class="service_details">
+        <div class="mt95 service-container">
+          <div class="service_details slide-up">
             <img src="./assets/img/design.png" alt="ディザイーの画像" />
             <div>
               <h3 class="pb30 fz-30 fz-en-b">Design</h3>
-              <p class="fz-16 fz-jp-b">ウェブサイトやバナーのデザインをします。新規サイトの作成やウェブサイトのリニューアルはもちろん、「既存サイトの一部だけデザインを変更する」やバナーの修正など小回りの効く対応が可能です。ウェブサイトのデザインと合わせたパンフレットや名刺、ノベルティの作成なども対応可能です。</p>
+              <p class="fz-16 fz-jp-b">
+                ウェブサイトやバナーのデザインをします。新規サイトの作成やウェブサイトのリニューアルはもちろん、「既存サイトの一部だけデザインを変更する」やバナーの修正など小回りの効く対応が可能です。ウェブサイトのデザインと合わせたパンフレットや名刺、ノベルティの作成なども対応可能です。
+              </p>
             </div>
           </div>
         </div>
-        <div class="mt95">
-          <div class="service_details">
+        <div class="mt95 service-container">
+          <div class="service_details slide-up">
             <img src="./assets/img/coding.png" alt="コーディングの画像" />
             <div>
               <h3 class="pb30 fz-30 fz-en-b">Coding / Programming</h3>
-              <p class="fz-16 fz-jp-b">デザインデータの通りにウェブサイトを構築したり、アニメーションを実装したり、送信フォームやシステムの開発、条件分岐を用いた表示ロジックの調整など対応します。様々な画面サイズで表示が崩れないように調整するレスポンシブ対応が可能です。（PC、スマホ、タブレット対応）。</p>
+              <p class="fz-16 fz-jp-b">
+                デザインデータの通りにウェブサイトを構築したり、アニメーションを実装したり、送信フォームやシステムの開発、条件分岐を用いた表示ロジックの調整など対応します。様々な画面サイズで表示が崩れないように調整するレスポンシブ対応が可能です。（PC、スマホ、タブレット対応）。
+              </p>
             </div>
           </div>
         </div>
-        <div class="mt95">
-          <div class="service_details">
+        <div class="mt95 service-container">
+          <div class="service_details slide-up">
             <img src="./assets/img/wordpress.png" alt="ワードプレスの画像" />
             <div>
               <h3 class="pb30 fz-30 fz-en-b">Wordpress / CMS</h3>
-              <p class="fz-16 fz-jp-b">ワードプレスなどCMS（コンテンツマネジメントシステム）をウェブサイトに導入する対応ができます。CMSを使うことで、ITエンジニアでなくても管理画面から簡単にウェブサイトの更新ができるようになります。自由度の高いカスタマイズができる技術があるので、運用しやすいサイトの構築が可能です。</p>
+              <p class="fz-16 fz-jp-b">
+                ワードプレスなどCMS（コンテンツマネジメントシステム）をウェブサイトに導入する対応ができます。CMSを使うことで、ITエンジニアでなくても管理画面から簡単にウェブサイトの更新ができるようになります。自由度の高いカスタマイズができる技術があるので、運用しやすいサイトの構築が可能です。
+              </p>
             </div>
           </div>
         </div>
-        <div class="mt95">
-          <div class="service_details">
+        <div class="mt95 service-container">
+          <div class="service_details slide-up">
             <img src="./assets/img/sns.png" alt="SNS の画像" />
             <div>
               <h3 class="pb30 fz-30 fz-en-b">SNS / Marketing</h3>
-              <p class="fz-16 fz-jp-b">Facebook、Instagram、Twitter、You TubeなどSNSに埋め込みしたり、ウェブサイトと連動させたSNSの運用を代行したりすることでより商品・サービスへのリーチが増やす対応が可能です。SNSの広告運用やアクセス解析、投稿用の画像加工や動画編集など多岐にわたるサポートが可能です。</p>
+              <p class="fz-16 fz-jp-b">
+                Facebook、Instagram、Twitter、You
+                TubeなどSNSに埋め込みしたり、ウェブサイトと連動させたSNSの運用を代行したりすることでより商品・サービスへのリーチが増やす対応が可能です。SNSの広告運用やアクセス解析、投稿用の画像加工や動画編集など多岐にわたるサポートが可能です。
+              </p>
             </div>
           </div>
         </div>
       </div>
     </section>
+
     <!-- work section -->
     <section class="work">
       <div class="container">
@@ -188,7 +206,9 @@
                 <h3>ミャンマーなび</h3>
               </div>
               <div class="work-list-txt">
-                <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                <p>
+                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
+                </p>
               </div>
             </li>
           </ul>
@@ -201,7 +221,9 @@
                 <h3>東京鶴丸会様</h3>
               </div>
               <div class="work-list-txt">
-                <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                <p>
+                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
+                </p>
               </div>
             </li>
           </ul>
@@ -214,7 +236,9 @@
                 <h3>株式会社テレス様</h3>
               </div>
               <div class="work-list-txt">
-                <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                <p>
+                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
+                </p>
               </div>
             </li>
           </ul>
@@ -227,7 +251,9 @@
                 <h3>道福祉介護事業 協同組合様</h3>
               </div>
               <div class="work-list-txt">
-                <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                <p>
+                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
+                </p>
               </div>
             </li>
           </ul>
@@ -240,7 +266,9 @@
                 <h3>町田産婦人科 菜の花クリニック様</h3>
               </div>
               <div class="work-list-txt">
-                <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                <p>
+                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
+                </p>
               </div>
             </li>
           </ul>
@@ -253,7 +281,9 @@
                 <h3>QA TEST LAB</h3>
               </div>
               <div class="work-list-txt">
-                <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                <p>
+                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
+                </p>
               </div>
             </li>
           </ul>
@@ -266,20 +296,27 @@
                 <h3>やすだ勝平様</h3>
               </div>
               <div class="work-list-txt">
-                <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                <p>
+                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
+                </p>
               </div>
             </li>
           </ul>
           <ul>
             <li>
               <div class="work-list-img">
-                <img src="./assets/img/hearty-care.png" alt="ハーティーケアー様" />
+                <img
+                  src="./assets/img/hearty-care.png"
+                  alt="ハーティーケアー様"
+                />
               </div>
               <div class="work-list-ttl">
                 <h3>株式会社ハーティーケアー様</h3>
               </div>
               <div class="work-list-txt">
-                <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                <p>
+                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
+                </p>
               </div>
             </li>
           </ul>
@@ -292,7 +329,9 @@
                 <h3>沼崎病院様</h3>
               </div>
               <div class="work-list-txt">
-                <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                <p>
+                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
+                </p>
               </div>
             </li>
           </ul>
@@ -305,33 +344,45 @@
                 <h3>九州大学経済学部 東京同窓会様</h3>
               </div>
               <div class="work-list-txt">
-                <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                <p>
+                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
+                </p>
               </div>
             </li>
           </ul>
           <ul>
             <li>
               <div class="work-list-img">
-                <img src="./assets/img/tokyo-alumni.png" alt="九州大学東京同窓会 " />
+                <img
+                  src="./assets/img/tokyo-alumni.png"
+                  alt="九州大学東京同窓会 "
+                />
               </div>
               <div class="work-list-ttl">
                 <h3>九州大学東京同窓会 サマーフェスタ</h3>
               </div>
               <div class="work-list-txt">
-                <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                <p>
+                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
+                </p>
               </div>
             </li>
           </ul>
           <ul>
             <li>
               <div class="work-list-img">
-                <img src="./assets/img/jtc-language-center.png" alt="JTC日本語学校" />
+                <img
+                  src="./assets/img/jtc-language-center.png"
+                  alt="JTC日本語学校"
+                />
               </div>
               <div class="work-list-ttl">
                 <h3>JTC日本語学校</h3>
               </div>
               <div class="work-list-txt">
-                <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                <p>
+                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
+                </p>
               </div>
             </li>
           </ul>
@@ -344,7 +395,9 @@
                 <h3>Sone Twet Thi</h3>
               </div>
               <div class="work-list-txt">
-                <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                <p>
+                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
+                </p>
               </div>
             </li>
           </ul>
@@ -357,20 +410,27 @@
                 <h3>青汁ナチュラル</h3>
               </div>
               <div class="work-list-txt">
-                <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                <p>
+                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
+                </p>
               </div>
             </li>
           </ul>
           <ul>
             <li>
               <div class="work-list-img">
-                <img src="./assets/img/green-juice-fruity.png" alt="青汁フルーティ" />
+                <img
+                  src="./assets/img/green-juice-fruity.png"
+                  alt="青汁フルーティ"
+                />
               </div>
               <div class="work-list-ttl">
                 <h3>青汁フルーティ</h3>
               </div>
               <div class="work-list-txt">
-                <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
+                <p>
+                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
+                </p>
               </div>
             </li>
           </ul>
