--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
           </div>
           <div class="navbar fz-en-b">
             <ul>
-              <li><a href="">About</a></li>
-              <li><a href="">Service</a></li>
-              <li><a href="">Works</a></li>
-              <li><a href="">Contact</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#service">Service</a></li>
+              <li><a href="#works">Works</a></li>
+              <li><a href="#contact">Contact</a></li>
             </ul>
           </div>
           <div class="menu-toggle">
@@ -55,7 +55,7 @@
     </section>
 
     <!-- about section -->
-    <section class="about">
+    <section class="about" id="about">
       <div class="container">
         <h2 class="about-ttl">
           About
@@ -191,7 +191,7 @@
     </section>
 
     <!-- work section -->
-    <section class="work">
+    <section class="work" id="works">
       <div class="container">
         <h2 class="work-ttl">
           Works
@@ -449,10 +449,10 @@
         <div class="footer fz-en-b">
           <div class="footer-nav">
             <ul>
-              <li><a href="">About</a></li>
-              <li><a href="">Service</a></li>
-              <li><a href="">Works</a></li>
-              <li><a href="">Contact</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#service">Service</a></li>
+              <li><a href="#works">Works</a></li>
+              <li><a href="#contact">Contact</a></li>
             </ul>
           </div>
           <div class="copyright">&copy; Qualy, Inc. All rights reserved.</div>
