--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Qualy portfolio</title>
+    <title>Qualy Portfolio</title>
     <link rel="icon" href="./assets/img/logo.png">
     <link rel="stylesheet" href="assets/css/import.css" />
     <link rel="stylesheet" href="assets/css/slick.css" />
