--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                 <img src="./assets/img/speed.png" alt="スピード" />
               </div>
               <div class="about-list-ttl">
-                <h3 class="fz-en-b">
+                <h3 class="fz-jp-b fz-18 fz-15-sp">
                   SPEED
-                  <span>速い</span>
+                  <span class="fz-18 fz-13-sp">速い</span>
                 </h3>
               </div>
               <div class="about-list-txt">
@@ -84,10 +84,10 @@
               <div class="about-img">
                 <img src="./assets/img/flexible.png" alt="スピード" />
               </div>
-              <div class="about-list-ttl fz-jp-b">
+              <div class="about-list-ttl fz-jp-b fz-18 fz-15-sp">
                 <h3>
                   FLEXIBLE
-                  <span>柔軟性</span>
+                  <span class="fz-18 fz-13-sp">柔軟性</span>
                 </h3>
               </div>
               <div class="about-list-txt">
@@ -101,10 +101,10 @@
               <div class="about-img">
                 <img src="./assets/img/experience.png" alt="スピード" />
               </div>
-              <div class="about-list-ttl fz-jp-b">
+              <div class="about-list-ttl fz-jp-b fz-18 fz-15-sp">
                 <h3>
                   EXPERIENCE
-                  <span>対応実績</span>
+                  <span class="fz-18 fz-13-sp">対応実績</span>
                 </h3>
               </div>
               <div class="about-list-txt">
