--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
               <img src="assets/img/header_logo.png" alt="クオリーの画像" />
             </a>
           </div>
-          <div class="navbar fz-en-b">
-            <ul>
-              <li><a href="#about">About</a></li>
-              <li><a href="#service">Service</a></li>
-              <li><a href="#works">Works</a></li>
-              <li><a href="#contact">Contact</a></li>
+          <div class="navbar fz-en-b" id="gnav">
+            <ul class="menu-nav">
+              <li><a href="#about" class="menu-link">About</a></li>
+              <li><a href="#service" class="menu-link">Service</a></li>
+              <li><a href="#works" class="menu-link">Works</a></li>
+              <li><a href="#contact" class="menu-link">Contact</a></li>
             </ul>
           </div>
           <div class="menu-toggle">
