--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
     </section>
 
     <footer id="footer">
-      <div class="scroll-top">
+      <div class="scroll-top for-z">
         <a href="#top">
           <img src="assets/img/scroll_top.png" alt="">
         </a>
