--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
     <div class="container">
       <div class="slider center">
         <div class="slider-img">
-          <img src="assets/img/slider1.png" alt="branches one" />
+          <img src="assets/img/slider1.png" alt="スライダーの画像1" />
         </div>
         <div class="slider-img">
-          <img src="assets/img/slider2.png" alt="branches one" />
+          <img src="assets/img/slider2.png" alt="スライダーの画像2" />
         </div>
         <div class="slider-img">
-          <img src="assets/img/slider3.png" alt="branches one" />
+          <img src="assets/img/slider3.png" alt="スライダーの画像3" />
         </div>
       </div>
     </div>
@@ -66,7 +66,7 @@
         <ul>
           <li class="slide-up">
             <div class="about-img">
-              <img src="./assets/img/speed.png" alt="スピード" />
+              <img src="./assets/img/speed.png" alt="速いの画像" />
             </div>
             <div class="about-list-ttl">
               <h3 class="fz-jp-b fz-18 fz-15-sp">
@@ -83,7 +83,7 @@
 
           <li class="slide-up">
             <div class="about-img">
-              <img src="./assets/img/flexible.png" alt="スピード" />
+              <img src="./assets/img/flexible.png" alt="柔軟性の画像" />
             </div>
             <div class="about-list-ttl fz-jp-b fz-18 fz-15-sp">
               <h3>
@@ -100,7 +100,7 @@
 
           <li class="slide-up">
             <div class="about-img">
-              <img src="./assets/img/experience.png" alt="スピード" />
+              <img src="./assets/img/experience.png" alt="対応実績の画像" />
             </div>
             <div class="about-list-ttl fz-jp-b fz-18 fz-15-sp">
               <h3>
@@ -130,7 +130,7 @@
 
       <div class="mt95 service-container">
         <div class="service_details slide-up">
-          <img src="./assets/img/seo.png" alt="SEOの画像" />
+          <img src="./assets/img/seo.png" alt="ターゲットの画像" />
           <div>
             <h3 class="pb30 fz-25 fz-18-sp fz-en-b">SEO / Marketing</h3>
             <p class="fz-14 fz-jp-b">
@@ -174,7 +174,7 @@
       </div>
       <div class="mt95 service-container">
         <div class="service_details slide-up">
-          <img src="./assets/img/sns.png" alt="SNS の画像" />
+          <img src="./assets/img/sns.png" alt="エス・エン・エスの画像" />
           <div>
             <h3 class="pb30 fz-25 fz-18-sp fz-en-b">SNS / Marketing</h3>
             <p class="fz-14 fz-jp-b">
@@ -198,10 +198,10 @@
         <ul>
           <li class="slide-up">
             <div class="work-list-img">
-              <a href=""> <img src="./assets/img/myan-navi.png" alt="ミャンマーなび" />
+              <a href=""> <img src="./assets/img/myan-navi.png" alt="ミャンマーなびの画像" />
                 <div class="overlay">
                   <span class="text">VIEW PAGE</span>
-                  <img src="./assets/img/view-pg.png" alt="もっとページ">
+                  <img src="./assets/img/view-pg.png" alt="もっとページの画像">
                 </div>
               </a>
 
@@ -219,10 +219,10 @@
 
           <li class="slide-up">
             <div class="work-list-img">
-              <a href=""> <img src="./assets/img/other.png" alt="東京鶴丸会様" />
+              <a href=""> <img src="./assets/img/other.png" alt="東京鶴丸会様の画像" />
                 <div class="overlay">
                   <span class="text">VIEW PAGE</span>
-                  <img src="./assets/img/view-pg.png" alt="もっとページ">
+                  <img src="./assets/img/view-pg.png" alt="もっとページの画像">
                 </div>
               </a>
             </div>
@@ -239,10 +239,10 @@
 
           <li class="slide-up">
             <div class="work-list-img">
-              <a href=""><img src="./assets/img/teles.png" alt="株式会社テレス様" />
+              <a href=""><img src="./assets/img/teles.png" alt="株式会社テレス様の画像" />
                 <div class="overlay">
                   <span class="text">VIEW PAGE</span>
-                  <img src="./assets/img/view-pg.png" alt="もっとページ">
+                  <img src="./assets/img/view-pg.png" alt="もっとページの画像">
                 </div>
               </a>
             </div>
@@ -259,10 +259,10 @@
 
           <li class="slide-up">
             <div class="work-list-img">
-              <a href=""><img src="./assets/img/nursing.png" alt="看護" />
+              <a href=""><img src="./assets/img/nursing.png" alt="看護の画像" />
                 <div class="overlay">
                   <span class="text">VIEW PAGE</span>
-                  <img src="./assets/img/view-pg.png" alt="もっとページ">
+                  <img src="./assets/img/view-pg.png" alt="もっとページの画像">
                 </div>
               </a>
             </div>
@@ -279,10 +279,10 @@
 
           <li class="slide-up">
             <div class="work-list-img">
-              <a href=""><img src="./assets/img/clinic.png" alt="診療所" />
+              <a href=""><img src="./assets/img/clinic.png" alt="診療所の画像" />
                 <div class="overlay">
                   <span class="text">VIEW PAGE</span>
-                  <img src="./assets/img/view-pg.png" alt="もっとページ">
+                  <img src="./assets/img/view-pg.png" alt="もっとページの画像">
                 </div>
               </a>
             </div>
@@ -299,10 +299,10 @@
 
           <li class="slide-up">
             <div class="work-list-img">
-              <a href=""><img src="./assets/img/QAtest.png" alt="QA TEST LAB" />
+              <a href=""><img src="./assets/img/QAtest.png" alt="キュー・アー・テストの画像" />
                 <div class="overlay">
                   <span class="text">VIEW PAGE</span>
-                  <img src="./assets/img/view-pg.png" alt="もっとページ">
+                  <img src="./assets/img/view-pg.png" alt="もっとページの画像">
                 </div>
               </a>
             </div>
@@ -319,10 +319,10 @@
 
           <li class="slide-up">
             <div class="work-list-img">
-              <a href=""><img src="./assets/img/yamada.png" alt="やすだ勝平様" />
+              <a href=""><img src="./assets/img/yamada.png" alt="やすだ勝平様の画像" />
                 <div class="overlay">
                   <span class="text">VIEW PAGE</span>
-                  <img src="./assets/img/view-pg.png" alt="もっとページ">
+                  <img src="./assets/img/view-pg.png" alt="もっとページの画像">
                 </div>
               </a>
             </div>
@@ -339,7 +339,7 @@
 
           <li class="slide-up">
             <div class="work-list-img">
-              <img src="./assets/img/hearty-care.png" alt="ハーティーケアー様" />
+              <img src="./assets/img/hearty-care.png" alt="ハーティーケアー様の画像" />
             </div>
             <div class="work-list-ttl fz-jp-b fz-16 fz-14-sp">
               <h3>株式会社ハーティーケアー様</h3>
@@ -354,10 +354,10 @@
 
           <li class="slide-up">
             <div class="work-list-img">
-              <a href=""><img src="./assets/img/namazaki.png" alt="沼崎" />
+              <a href=""><img src="./assets/img/namazaki.png" alt="沼崎の画像" />
                 <div class="overlay">
                   <span class="text">VIEW PAGE</span>
-                  <img src="./assets/img/view-pg.png" alt="もっとページ">
+                  <img src="./assets/img/view-pg.png" alt="もっとページの画像">
                 </div>
               </a>
             </div>
@@ -376,10 +376,10 @@
 
           <li class="slide-up">
             <div class="work-list-img">
-              <a href=""><img src="./assets/img/kyushu-university.png" alt="九州大学" />
+              <a href=""><img src="./assets/img/kyushu-university.png" alt="九州大学の画像" />
                 <div class="overlay">
                   <span class="text">VIEW PAGE</span>
-                  <img src="./assets/img/view-pg.png" alt="もっとページ">
+                  <img src="./assets/img/view-pg.png" alt="もっとページの画像">
                 </div>
               </a>
             </div>
@@ -398,7 +398,7 @@
           <li class="slide-up">
             <div class="work-list-img">
 
-              <a href=""><img src="./assets/img/tokyo-alumni.png" alt="九州大学東京同窓会 " />
+              <a href=""><img src="./assets/img/tokyo-alumni.png" alt="九州大学東京同窓会" />
                 <div class="overlay">
                   <span class="text">VIEW PAGE</span>
                   <img src="./assets/img/view-pg.png" alt="もっとページ">
@@ -422,7 +422,7 @@
 
           <li class="slide-up">
             <div class="work-list-img">
-              <img src="./assets/img/jtc-language-center.png" alt="JTC日本語学校" />
+              <img src="./assets/img/jtc-language-center.png" alt="日本語学校の画像" />
             </div>
             <div class="work-list-ttl fz-jp-b fz-16 fz-14-sp">
               <h3>JTC日本語学校</h3>
@@ -437,10 +437,10 @@
 
           <li class="slide-up">
             <div class="work-list-img">
-              <a href=""><img src="./assets/img/sonetwethi.png" alt="ソネトゥティ" />
+              <a href=""><img src="./assets/img/sonetwethi.png" alt="ソネトゥティの画像" />
                 <div class="overlay">
                   <span class="text">VIEW PAGE</span>
-                  <img src="./assets/img/view-pg.png" alt="もっとページ">
+                  <img src="./assets/img/view-pg.png" alt="もっとページの画像">
                 </div>
               </a>
             </div>
@@ -456,10 +456,10 @@
 
           <li class="slide-up">
             <div class="work-list-img">
-              <a href=""><img src="./assets/img/green-juice1.png" alt="青汁ナチュラル" />
+              <a href=""><img src="./assets/img/green-juice1.png" alt="青汁ナチュラルの画像" />
                 <div class="overlay">
                   <span class="text">VIEW PAGE</span>
-                  <img src="./assets/img/view-pg.png" alt="もっとページ">
+                  <img src="./assets/img/view-pg.png" alt="もっとページの画像">
                 </div>
               </a>
             </div>
@@ -475,7 +475,7 @@
 
           <li class="slide-up">
             <div class="work-list-img">
-              <img src="./assets/img/green-juice-fruity.png" alt="青汁フルーティ" />
+              <img src="./assets/img/green-juice-fruity.png" alt="青汁フルーティの画像" />
             </div>
             <div class="work-list-ttl fz-jp-b fz-16 fz-14-sp">
               <h3>青汁フルーティ</h3>
@@ -494,7 +494,7 @@
   <footer id="footer">
     <div class="scroll-top for-z">
       <a href="#top">
-        <img src="assets/img/scroll_top.png" alt="">
+        <img src="assets/img/scroll_top.png" alt="スクロールトップの画像">
       </a>
     </div>
     <div class="container">
