--- a/index.html
+++ b/index.html
@@ -398,10 +398,10 @@
           <li class="slide-up">
             <div class="work-list-img">
 
-              <a href=""><img src="./assets/img/tokyo-alumni.png" alt="九州大学東京同窓会" />
+              <a href=""><img src="./assets/img/tokyo-alumni.png" alt="九州大学東京同窓会の画像" />
                 <div class="overlay">
                   <span class="text">VIEW PAGE</span>
-                  <img src="./assets/img/view-pg.png" alt="もっとページ">
+                  <img src="./assets/img/view-pg.png" alt="もっとページの画像">
                 </div>
               </a>
 
