--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="container">
       <h2 class="about-ttl fz-30 fz-25-sp fz-en-b">
         About
-        <span class="fz-18 fz-15-sp">事業概要</span>
+        <span class="fz-18 fz-15-sp fz-jp-b">事業概要</span>
       </h2>
       <div class="about-list">
         <ul>
@@ -76,10 +76,10 @@
             <div class="about-list-ttl">
               <h3 class="fz-jp-b fz-18 fz-15-sp">
                 SPEED
-                <span class="fz-18 fz-13-sp">速い</span>
+                <span class="fz-18 fz-13-sp fz-jp-b">速い</span>
               </h3>
             </div>
-            <div class="about-list-txt">
+            <div class="about-list-txt fz-jp-b">
               <p>
                 実装スピードの速さに自信があります。どうしてスピードが速いかというと、在籍ITエンジニア数が多いためです。人海戦術でアサインを割り振り、ウェブサイトの新規構築やリニューアルはもちろん、テキスト修正や画像の差し替えなど細かな対応もすぐに対応が可能です。
               </p>
@@ -93,10 +93,10 @@
             <div class="about-list-ttl fz-jp-b fz-18 fz-15-sp">
               <h3>
                 FLEXIBLE
-                <span class="fz-18 fz-13-sp">柔軟性</span>
+                <span class="fz-18 fz-13-sp fz-jp-b">柔軟性</span>
               </h3>
             </div>
-            <div class="about-list-txt">
+            <div class="about-list-txt fz-jp-b">
               <p>
                 1箇所だけのテキスト修正やちょっとした画像の修正など細かな対応でもお受けしております。弊社が作成したサイトでなくても構築されたコードを解析して修正対応が可能です。既存サイトの一部分だけ修正したい、ウェブサイトを作成した制作会社が連絡がつかなくなった、保守会社を切り替えたいなどのご要望にもお応えできます。
               </p>
@@ -107,13 +107,13 @@
             <div class="about-img">
               <img src="./assets/img/experience.png" alt="対応実績の画像" />
             </div>
-            <div class="about-list-ttl fz-jp-b fz-18 fz-15-sp">
+            <div class="about-list-ttl fz-18 fz-15-sp">
               <h3>
                 EXPERIENCE
-                <span class="fz-18 fz-13-sp">対応実績</span>
+                <span class="fz-18 fz-13-sp fz-jp-b">対応実績</span>
               </h3>
             </div>
-            <div class="about-list-txt">
+            <div class="about-list-txt fz-jp-b">
               <p>
                 2016年から6年以上、ウェブ制作会社やデザイン会社の下請けとして数多の日本企業、サービスのサイトを構築してきました。契約上、実績公開できない物が多くありますが、行政、大学、大手自動車メーカー製品サイト、大手電機メーカー製品サイトなどいわゆる大手のウェブサイトも対応しているため技術力には自信があります。
               </p>
@@ -197,7 +197,7 @@
     <div class="container">
       <h2 class="work-ttl fz-30 fz-25-sp fz-en-b">
         Works
-        <span class="fz-18 fz-15-sp">制作事例</span>
+        <span class="fz-18 fz-15-sp fz-jp-b">制作事例</span>
       </h2>
       <div class="work-list">
         <ul>
@@ -214,7 +214,7 @@
             <div class="work-list-ttl fz-jp-b fz-16 fz-14-sp">
               <h3>ミャンマーなび</h3>
             </div>
-            <div class="work-list-txt">
+            <div class="work-list-txt fz-jp-b">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -234,7 +234,7 @@
             <div class="work-list-ttl fz-jp-b fz-16 fz-14-sp">
               <h3>東京鶴丸会様</h3>
             </div>
-            <div class="work-list-txt">
+            <div class="work-list-txt fz-jp-b">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -254,7 +254,7 @@
             <div class="work-list-ttl fz-jp-b fz-16 fz-14-sp">
               <h3>株式会社テレス様</h3>
             </div>
-            <div class="work-list-txt">
+            <div class="work-list-txt fz-jp-b">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -274,7 +274,7 @@
             <div class="work-list-ttl fz-jp-b fz-16 fz-14-sp">
               <h3>道福祉介護事業 協同組合様</h3>
             </div>
-            <div class="work-list-txt">
+            <div class="work-list-txt fz-jp-b">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -294,7 +294,7 @@
             <div class="work-list-ttl fz-jp-b fz-16 fz-14-sp">
               <h3>町田産婦人科 菜の花クリニック様</h3>
             </div>
-            <div class="work-list-txt">
+            <div class="work-list-txt fz-jp-b">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -314,7 +314,7 @@
             <div class="work-list-ttl fz-jp-b fz-16 fz-14-sp">
               <h3>QA TEST LAB</h3>
             </div>
-            <div class="work-list-txt">
+            <div class="work-list-txt fz-jp-b">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -334,7 +334,7 @@
             <div class="work-list-ttl fz-jp-b fz-16 fz-14-sp">
               <h3>やすだ勝平様</h3>
             </div>
-            <div class="work-list-txt">
+            <div class="work-list-txt fz-jp-b">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -354,7 +354,7 @@
             <div class="work-list-ttl fz-jp-b fz-16 fz-14-sp">
               <h3>株式会社ハーティーケアー様</h3>
             </div>
-            <div class="work-list-txt">
+            <div class="work-list-txt fz-jp-b">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -443,7 +443,7 @@
             <div class="work-list-ttl fz-jp-b fz-16 fz-14-sp">
               <h3>JTC日本語学校</h3>
             </div>
-            <div class="work-list-txt">
+            <div class="work-list-txt fz-jp-b">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -463,7 +463,7 @@
             <div class="work-list-ttl fz-jp-b fz-16 fz-14-sp">
               <h3>Sone Twet Thi</h3>
             </div>
-            <div class="work-list-txt">
+            <div class="work-list-txt fz-jp-b">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -482,7 +482,7 @@
             <div class="work-list-ttl fz-jp-b fz-16 fz-14-sp">
               <h3>青汁ナチュラル</h3>
             </div>
-            <div class="work-list-txt">
+            <div class="work-list-txt fz-jp-b">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -502,7 +502,7 @@
             <div class="work-list-ttl fz-jp-b fz-16 fz-14-sp">
               <h3>青汁フルーティ</h3>
             </div>
-            <div class="work-list-txt">
+            <div class="work-list-txt fz-jp-b">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
